--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@css-render/vue3-ssr": "^0.15.14",
     "@giscus/vue": "^3.0.0",
     "@vicons/material": "^0.12.0",
+    "busuanzi.pure.js": "^1.0.3",
     "dayjs": "^1.11.13",
     "naive-ui": "^2.40.1",
     "prettier": "^3.3.3",
