--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   },
   "dependencies": {
     "pagefind": "^1.2.0",
+    "viewerjs": "^1.11.6",
+    "vitepress-plugin-image-viewer": "^1.1.5",
     "vitepress-plugin-pagefind": "^0.4.10"
   }
 }
