--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,5 +26,5 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@v4 # 使用别人写好的 actions
         with: # 自定义环境变量
           BRANCH: gh-pages # github page指定分支
-          FOLDER: docs/.vuepress/dist # build后生成的目录
+          FOLDER: docs/.vitepress/dist # build后生成的目录
           clean: true
