--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   "devDependencies": {
     "@css-render/vue3-ssr": "^0.15.14",
     "@giscus/vue": "^3.0.0",
+    "@types/node": "^24.0.10",
     "@vicons/material": "^0.12.0",
     "busuanzi.pure.js": "^1.0.3",
     "dayjs": "^1.11.13",
+    "install": "^0.13.0",
     "naive-ui": "^2.40.1",
     "prettier": "^3.3.3",
     "sass": "^1.81.0",
